# CelebratoryBullets

./: .gitignore  README.md
bulletserver/: go.mod  go.sum
bulletserver/cmd/bulletserver/: GL_Drawing.txt  bulletserver.go
bulletserver/cmd/clients/: newclient.go
bulletserver/configs/: bullet.go  config_informaiton.go
bulletserver/internal/client/: client.go
bulletserver/internal/server/: grpc.go  mq.go  redisserver.go  server.go
bulletserver/pkg/: errorhandle.go
bulletserver/proto/: bullets.proto
drawing_core/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
drawing_core/include/: camera.h
drawing_core/src/: CMakeLists.txt  Makefile  bullet.fs  bullet.gs  bullet.vs  cmake_install.cmake  fireworkbullet.cpp  fireworkbullet.h
server/: go.mod
server/cmd/gradingservice/: main.go
server/cmd/logservice/: main.go
server/cmd/registryservice/: main.go
server/grades/: mockdata.go  server.go
server/mylog/: client.go  server.go
server/registry/: client.go  registration.go  server.go
server/service/: service.go
